<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.example.topalbumsapp.models.Album" />
    </data>

    <ScrollView
        android:id="@+id/detailContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageAlbumDetail"
                android:layout_width="@dimen/icon_big_size"
                android:layout_height="@dimen/icon_big_size"
                android:layout_marginBottom="@dimen/margin_large"
                android:contentDescription="@string/album_cover"
                android:scaleType="centerCrop"
                app:loadImageUrl="@{album.imageUrl}" />

            <TextView
                android:id="@+id/textAlbumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:gravity="center"
                android:text="@{album.name}"
                android:textSize="@dimen/text_size_xlarge"
                android:textStyle="bold"
                tools:text="Album name" />

            <TextView
                android:id="@+id/textArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text='@{@string/artist + album.artist}'
                android:textSize="@dimen/text_size_normal"
                tools:text="@string/artist" />

            <TextView
                android:id="@+id/textGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text='@{@string/genre + album.genre}'
                android:textSize="@dimen/text_size_small"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text='@{@string/price + album.price}'
                android:textSize="@dimen/text_size_small"
                tools:text="@string/price" />

            <TextView
                android:id="@+id/textReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text='@{@string/release_date + album.releaseDate}'
                android:textSize="@dimen/text_size_small"
                tools:text="@string/release_date" />
        </LinearLayout>
    </ScrollView>
</layout>